move config.toml to config directory
Based on the standard layout for go projects, configuration files and
templates should be in a config/ directory.

--- a/config/config-template.toml
+++ b/config/config-template.toml
@@ -1,4 +1,4 @@
-# This is an example configuration file for an emirc.IRCGateway instance.
+# This is an example configuration file for an irc.Gateway instance.
 nick = "emersyx"
 ident = "emersyx"
 name = "emersyx"
